# miso-swap

./: LICENSE  README.md  default.nix  miso-swap.cabal  miso-swap.nix  stack.yaml
src/: Additive.hs  Component.hs  Main.hs  Mini.hs  Multiplicative.hs  SubModel.hs
