name:                miso-swap
version:             0.1.0.0
synopsis:            Swappable Model component
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base,
                       miso,
                       containers,
                       aeson
  default-language:    Haskell2010
